--- a/wc07.tex
+++ b/wc07.tex
@@ -63,33 +63,33 @@ To attempt and submit the WC, you will require:
 \newpage
 \section*{The Setup}
 
-A \textit{graph} $G= (V, E)$ consists of $V$, a nonempty set of \textit{vertices} (or \textit{nodes}) and $E$, a set of \textit{edges} (or \textit{links}). Each edge is a set of unordered pairs $\{v_1, v_2\}$ of vertices. The vertices $v_i$ and $v_2$ of an edge $\{v_i, v_2\}$ are called the edge's \textit{endpoints}. 
+A \textit{graph} $G= (V, E)$ consists of $V$, a nonempty set of \textit{vertices} (or \textit{nodes}), and $E$, a set of \textit{edges} (or \textit{links}). Each edge is a set of unordered pairs $\{v_1, v_2\}$ of vertices. The vertices $v_i$ and $v_2$ of an edge $\{v_i, v_2\}$ are called the edge's \textit{endpoints}. 
 
 Of course, as a capable student of Algorithms, you already know this! Moreover, Registrar Office (RO) knows that you know this, and is seeking your help to schedule final exams.
 
-You are provided the data of $n$ courses, each of which requires an exam to be scheduled. For each course, $i$, $1\le i \le n$, you are also provided the data of the $m_i$ students enrolled in the course. Specifically, you are provided the student ID of the enrolled students. Of course, every student is enrolled in multiple courses.
+You are provided the data of $n$ courses, each of which requires an exam to be scheduled. For each course, $i$, $1\le i \le n$, you are also provided the data of all the students enrolled in the course. Specifically, you are provided the student ID of the enrolled students. Some students are enrolled in multiple courses.
 
-RO wants you to schedule exams such that every student can take their exam. That is, no student has more than one exam scheduled at any given time. RO also wants you to minimize the total number of time slots in which exams are scheduled.
+RO wants you to schedule exams such that every student can take their exam. That is, every student takes the final exam of every course that they are enrolled in and no student has more than one exam scheduled at any given time. RO also wants you to minimize the total number of time slots in which exams are scheduled.
 
-Employing your algorithmic prowess, you come up with a \textit{conflict graph}. It is a graph containing $n$ nodes, where each node represents an exam to be scheduled. Two nodes have an edge between them iff the corresponding courses \textit{conflict}, i.e., they cannot be scheduled at the same time because there is at least one student who is enrolled in both of them.
+Employing your algorithmic prowess, you come up with a \textit{conflict graph}. It is a graph containing $n$ nodes, where each node represents an exam to be scheduled. Two nodes have an edge between them if the corresponding courses \textit{conflict}, i.e., they cannot be scheduled at the same time because there is at least one student who is enrolled in both of them.
 
-Remembering the saying, ``the world isn't just black and white'', form your Core courses, you have decided to represent different time slots using different colors in your conflict graph. All courses whose nodes have the same color in the graph will be scheduled at the same time.
+Remembering the saying, ``the world isn't just black and white'', from your Core courses, you have decided to assign colors to time slots in your conflict graph. All courses whose nodes have the same color in the graph will be scheduled at the same time.
 
-Thus, you have transformed your scheduling task to a \textit{graph coloring} problem! You just have to figure out the minimum number of colors to assign to your nodes such that the endpoints of every edge have a different color. Feeling smart, happy, and humbled, you make a pilgrimage to \href{https://en.wikipedia.org/wiki/Al-Khwarizmi_Complex}{Uzbekistan} in order to honor \href{https://www.openculture.com/2022/04/why-algorithms-are-called-algorithms.html}{Al-Khwarizmi}.
+Thus, you have transformed your scheduling task to a \textit{graph coloring} problem! You just have to figure out the minimum number of colors to assign to your nodes such that the endpoints of any given edge have a different color. Feeling smart, happy, and humbled, you make a pilgrimage to \href{https://en.wikipedia.org/wiki/Al-Khwarizmi_Complex}{Uzbekistan} in order to honor \href{https://www.openculture.com/2022/04/why-algorithms-are-called-algorithms.html}{Al-Khwarizmi}.
 
 
 \section*{Example}
 
-Shown below on the left is sample enrollment data of 5 courses, where the $i$-th line contains the student IDs of the students enrolled in course $i$. On its right is a resulting conflict graph of the exams. The graph is colored. Course 1 conflicts with courses 2, 3, and 4. Course 2 conflicts with courses 1, 3, and 4. And so on. A total of 4 time slots (colors) are used. Exams for courses 1 and 5 take place in the same slot. All of the other exams take place in different, separate slots.
+Shown below on the left is sample enrollment data of 5 courses, where the $i$-th line contains the student IDs of the students enrolled in course $i$. On its right is a resulting conflict graph of the exams. The graph is colored. The graph shows that course 1 conflicts with courses 2, 3, and 4; course 2 conflicts with courses 1, 3, and 4; and so on. A total of 4 time slots (colors) are used. Exams for courses 1 and 5 take place in the same time slot. All of the other exams take place in different, separate time slots.
 \bigskip
 
 \begin{minipage}{.4\textwidth}
 \begin{itemize}
-\item 1, 3, 6, 13, 17, 18
-\item 4, 7, 9, 14, 17, 18
-\item 1, 2, 6, 7, 12
-\item 3, 4, 5, 8, 9, 16
-\item 5, 8, 19, 20
+\item S1, S3, S6, S13, S17, S18
+\item S4, S7, S9, S14, S17, S18
+\item S1, S2, S6, S7, S12
+\item S3, S4, S5, S8, S9, S16
+\item S5, S8, S19, S20
 \end{itemize}
 \end{minipage}
 \begin{minipage}{.4\textwidth}
@@ -126,7 +126,7 @@ Shown below on the left is sample enrollment data of 5 courses, where the $i$-th
   \end{solution}
 
 \question
-  Generate sample course data and provide it below in $n$ lines. The $i$-th line contains the course enrollment of course, $i$, as a list of student IDs. Ensure a good amount of cross-enrollment, i.e., students enrolled in multiple courses.
+  Provide below, sample enrollment data for a desired number, $n$, of courses. The $i$-th line, $1\le i\le n$, contains the student IDs for the students enrolled in course $i$. Ensure a good amount of cross-enrollment, i.e., students enrolled in multiple courses.
   \begin{solution}
     
   \end{solution}
@@ -146,9 +146,8 @@ Shown below on the left is sample enrollment data of 5 courses, where the $i$-th
 
 \section*{Hints}
 \begin{itemize}
-\item Use the \texttt{networkx} package in Python to model a graph.
-\item Use the \texttt{matplotlib} package to visualize the graph. You can find related instructions \href{https://www.geeksforgeeks.org/python-visualize-graphs-generated-in-networkx-using-matplotlib/}{here}.
-\item Instructions on adding color the visualization are available \href{https://stackoverflow.com/questions/27030473/how-to-set-colors-for-nodes-in-networkx}{here}.
+\item Use the \texttt{networkx} package in Python to model a graph and the \texttt{matplotlib} package to visualize it. You can find related instructions \href{https://www.geeksforgeeks.org/python-visualize-graphs-generated-in-networkx-using-matplotlib/}{here}.
+\item Instructions on adding color to the visualization are available \href{https://stackoverflow.com/questions/27030473/how-to-set-colors-for-nodes-in-networkx}{here}.
 \end{itemize}
 
 \section*{Submission}
