language fixes for errors and clarity

--- a/wc07.tex
+++ b/wc07.tex
@@ -126,7 +126,7 @@ Shown below on the left is sample enrollment data of 5 courses, where the $i$-th
   \end{solution}
 
 \question
-  Provide below, sample enrollment data for a desired number, $n$, of courses. The $i$-th line, $1\le i\le n$, contains the student IDs for the students enrolled in course $i$. Ensure a good amount of cross-enrollment, i.e., students enrolled in multiple courses.
+  Provide below, sample enrollment data for a desired number, $n$, of courses. The $i$-th line, $1\le i\le n$, contains the student IDs of the students enrolled in course $i$. Ensure a good amount of cross-enrollment, i.e., students enrolled in multiple courses.
   \begin{solution}
     
   \end{solution}
