--- a/wc07.tex
+++ b/wc07.tex
@@ -67,11 +67,11 @@ A \textit{graph} $G= (V, E)$ consists of $V$, a nonempty set of \textit{vertices
 
 Of course, as a capable student of Algorithms, you already know this! Moreover, Registrar Office (RO) knows that you know this, and is seeking your help to schedule final exams.
 
-You are provided the data of $n$ courses, each of which requires an exam to be scheduled. For each course, $i$, $1\le i \le n$, you are also provided the data of all the students enrolled in the course. Specifically, you are provided the student ID of the enrolled students. Some students are enrolled in multiple courses.
+You are provided the data of $n$ courses, each of which requires an exam to be scheduled. For each course, $i$, $1\le i \le n$, you are also provided the data of all the students enrolled in the course. Specifically, you are provided the student IDs of the enrolled students.
 
 RO wants you to schedule exams such that every student can take their exam. That is, every student takes the final exam of every course that they are enrolled in and no student has more than one exam scheduled at any given time. RO also wants you to minimize the total number of time slots in which exams are scheduled.
 
-Employing your algorithmic prowess, you come up with a \textit{conflict graph}. It is a graph containing $n$ nodes, where each node represents an exam to be scheduled. Two nodes have an edge between them if the corresponding courses \textit{conflict}, i.e., they cannot be scheduled at the same time because there is at least one student who is enrolled in both of them.
+Employing your algorithmic prowess, you come up with a \textit{conflict graph}. It is a graph containing $n$ nodes, where each node represents an exam to be scheduled. Two nodes have an edge between them iff the corresponding courses \textit{conflict}, i.e., they cannot be scheduled at the same time because there is at least one student who is enrolled in both of them.
 
 Remembering the saying, ``the world isn't just black and white'', from your Core courses, you have decided to assign colors to time slots in your conflict graph. All courses whose nodes have the same color in the graph will be scheduled at the same time.
 
@@ -80,7 +80,7 @@ Thus, you have transformed your scheduling task to a \textit{graph coloring} pro
 
 \section*{Example}
 
-Shown below on the left is sample enrollment data of 5 courses, where the $i$-th line contains the student IDs of the students enrolled in course $i$. On its right is a resulting conflict graph of the exams. The graph is colored. The graph shows that course 1 conflicts with courses 2, 3, and 4; course 2 conflicts with courses 1, 3, and 4; and so on. A total of 4 time slots (colors) are used. Exams for courses 1 and 5 take place in the same time slot. All of the other exams take place in different, separate time slots.
+Shown below on the left is sample enrollment data of 5 courses, where the $i$-th line contains the student IDs of the students enrolled in course $i$. On its right is a resulting conflict graph of the exams. The graph is colored. The graph shows that course 1 conflicts with courses 2, 3, and 4; course 2 conflicts with courses 1, 3, and 4; and so on. A total of 4 time slots (colors) are used. Exams for course 1 and course 5 take place in the same time slot. All of the other exams take place in different, separate time slots.
 \bigskip
 
 \begin{minipage}{.4\textwidth}
@@ -109,30 +109,30 @@ Shown below on the left is sample enrollment data of 5 courses, where the $i$-th
 \begin{questions}
 
 \question
-  Given a general conflict graph with $n$ nodes, what is the \textit{maximum} number of colors that you can use to color your nodes such that neighboring nodes have different colors? Justify your answer.
+  Given a conflict graph with $n$ nodes, what is the \textit{maximum} number of colors that you can use to color your nodes such that neighboring nodes have different colors? Justify your answer.
   \begin{solution}
     
   \end{solution}
 \question
-  Of course, RO is interested in the \textit{minimum} number of colors. What is the minimum number of colors that can be used in a general conflict graph? Justify your answer.
-  \begin{solution}
-    
-  \end{solution}
-
-\question
-  Devise an algorithm to assign the minimum number of colors to the nodes in your graph. Provide the algorithm here in CLRS format.
+  Of course, RO is interested in the \textit{minimum} number of colors. What is the minimum number of colors that can be used in a conflict graph with $n$ nodes? Justify your answer.
   \begin{solution}
     
   \end{solution}
 
 \question
-  Provide below, sample enrollment data for a desired number, $n$, of courses. The $i$-th line, $1\le i\le n$, contains the student IDs of the students enrolled in course $i$. Ensure a good amount of cross-enrollment, i.e., students enrolled in multiple courses.
+  Devise an algorithm to assign the minimum number of colors to the nodes in a conflict graph. Provide the algorithm here in CLRS format.
   \begin{solution}
     
   \end{solution}
 
 \question
-  Include below a visualization of your colored conflict graph in which the nodes have been colored according to your algorithm above. Make sure that each node is labeled with its course ID.
+  Provide below, sample enrollment data for a desired number, $n$, of courses. The $i$-th line, $1\le i\le n$, contains the student IDs of the students enrolled in course $i$. Ensure a good amount of cross-enrollment, i.e., students enrolled in multiple and overlapping courses.
+  \begin{solution}
+    
+  \end{solution}
+
+\question
+  Include below a visualization of your conflict graph which is colored according to your algorithm above. Make sure that each node is labeled with its course ID.
   \begin{solution}
     
   \end{solution}
