language fixes for errors and clarity

--- a/wc07.tex
+++ b/wc07.tex
@@ -21,7 +21,7 @@ In this WC, you will model exam scheduling as a \textit{graph coloring} problem 
 
 \subsection*{Skills}
 
-This WC builds your skills in problem-solving and quantitative reasoning, invites you to apply computational thinking to real-world problems, and reinforces your skills related to algorithmic problem-solving and analysis.
+This WC builds your skills in problem-solving and quantitative reasoning, invites you to apply computational thinking to real-world problems, and reinforces your skills related to algorithmic problem-solving and analysis. These align with the university's  \href{https://habib.edu.pk/about-us/vision-values/}{learning goals}, the CS program's \href{https://habib.edu.pk/academics/sse/computer-science/}{learning outcomes}, and the course's \href{https://hulms.instructure.com/courses/4297/outcomes}{learning objectives}.
 
 Problems similar to the one described in this WC arise in real-world scheduling problems (e.g., timetabling, task scheduling, and resource allocation) and are widely applicable in job scheduling in operating systems, network optimization, and artificial intelligence.
 
@@ -29,11 +29,11 @@ Applying computer science concepts and computational thinking to real world prob
 
 Specifically, this WC develops expertise in:
 \begin{itemize}
-\item Graph Representation and Modeling (building a conflict graph from student enrollment data)
-\item Graph Coloring Algorithms (using graph coloring to minimize exam slots)
-\item Algorithm Design and Justification (developing and implementing an efficient scheduling algorithm)
-\item Data Visualization (using Python libraries to visualize conflict graphs)
-\item Computational Thinking and Randomization (generating realistic random course enrollment data)
+\item Graph Representation and Modeling: building a conflict graph from student enrollment data
+\item Graph Coloring Algorithms: using graph coloring to minimize exam slots
+\item Algorithm Design and Justification: developing and implementing an efficient scheduling algorithm
+\item Data Visualization: using Python libraries to visualize conflict graphs
+\item Computational Thinking and Randomization: generating realistic random course enrollment data
 \end{itemize}
 
 \section*{Background and Requirements}
